@@ -1,4 +1,5 @@
 * delete session on logout
+* chroust: invalid interpretation of clue_IDs=L if there are more hints
 
 rel 20.4.1
 * fix problem that attributes set in [traccar_zones] metadata section are not respected
